--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-605.4KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1007.2KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇮🇳 印度-2.22MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇸🇬 新加坡-4.12MB/s(Youtube:不良林), server: v2-2.godlight.xyz, port: 26944, type: vmess, uuid: 43308d27-94ec-408e-a8f6-d682cfb99ca9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /54f634fs, ws-headers: {Host: v2-2.godlight.xyz}}
-  - {name: 🇯🇵 日本-5.34MB/s(Youtube:不良林), server: jpaz3.xmrth-node.xyz, port: 15528, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz3.xmrth-node.xyz}}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林), server: 185.167.116.252, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.84MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-8.37MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-582.2KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 中国-658.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇰🇷 韩国-322.0KB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林), server: 213.183.53.179, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-605.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
