--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林), server: 185.167.116.252, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.84MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-582.2KB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇨🇳 中国-658.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇰🇷 韩国-322.0KB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林), server: 213.183.53.179, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-351.5KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: 185.167.116.252, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.99, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-5.11MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇦 加拿大-3.32MB/s(Youtube:不良林), server: 198.57.27.14, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 198.57.27.14, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 169.197.142.99, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 169.197.142.99, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-582.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-348.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-658.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-322.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
