--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-351.5KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: 185.167.116.252, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-3.19MB/s(Youtube:不良林), server: 169.197.142.99, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-5.11MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-199.6KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 169.197.142.99, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇬🇧 英国-2.90MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇨🇦 加拿大-3.32MB/s(Youtube:不良林), server: 198.57.27.14, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 198.57.27.14, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 169.197.142.99, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 169.197.142.99, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2, server: 169.197.142.99, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-351.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.90MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
